API DN Header - Get

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ApiDatabase": "Server=MSB-DESKTOP\\SQLEXPRESS;initial catalog=TU; MultipleActiveResultSets= True; integrated security=true;"
+    "ApiDatabase": "Server=TSE-LTP-013\\AYAZDB;initial catalog=db8; MultipleActiveResultSets= True; user id=sa;password=PAK123istan;"
   },
   "Logging": {
     "LogLevel": {
